# Rubik

./: CMakeLists.txt  Makefile
source/: CubeOps.cpp  CubeOps.h  main.cpp
